Walls set to rocks and burrows added as doors
Burrows as doors added

--- a/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -131,8 +131,8 @@ MRUItem0=/Game/Levels/EndRoom
 MRUItem1=/Game/Levels/Room4
 MRUItem2=/Game/Levels/Room3
 MRUItem3=/Game/Levels/Room2
-MRUItem4=/Game/Levels/BasicRoom
-MRUItem5=/Game/Levels/MasterLevel
+MRUItem4=/Game/Levels/MasterLevel
+MRUItem5=/Game/Levels/BasicRoom
 MRUItem6=/Game/Levels/MainMenu
 MRUItem7=/Game/Levels/LoseLevel
 MRUItem8=/Game/Levels/StartLevel
@@ -145,11 +145,11 @@ LastLevel=/Game/Levels/EndRoom
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/InGame/roomBackground.roomBackground
-OpenAssetsAtExit=/Game/Textures/Level1Material.Level1Material
-OpenAssetsAtExit=/Game/InGame/B_Room.B_Room
-OpenAssetsAtExit=/Game/Textures/Level3Material.Level3Material
 OpenAssetsAtExit=/Game/InGame/B_RoomFinal.B_RoomFinal
+OpenAssetsAtExit=/Game/InGame/Door.Door
+OpenAssetsAtExit=/Game/Textures/Level3Burrow_Mat.Level3Burrow_Mat
+OpenAssetsAtExit=/Game/Textures/Level2Burrow_Mat.Level2Burrow_Mat
+OpenAssetsAtExit=/Game/Textures/Level1Burrow_Mat.Level1Burrow_Mat
 
 [DetailCategories]
 Actor.TransformCommon=True
@@ -845,6 +845,41 @@ B_RoomFinal_C.Input=True
 B_RoomFinal_C.HLOD=True
 B_RoomFinal_C.WorldPartition=True
 B_RoomFinal_C.Events=True
+Texture2D.LevelOfDetail=True
+Texture2D.Compression=True
+Texture2D.Texture=True
+Texture2D.Adjustments=True
+Texture2D.File Path=True
+Texture2D.Compositing=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
+MaterialExpressionTextureCoordinate.MaterialExpression=True
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
+MaterialExpressionConstant.MaterialExpressionConstant=True
+MaterialExpressionConstant.MaterialExpression=True
+MaterialEditorInstanceConstant.General=True
+MaterialEditorInstanceConstant.Previewing=True
+MaterialExpressionScalarParameter.General=True
+MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
+MaterialExpressionScalarParameter.MaterialExpression=True
+MaterialExpressionScalarParameter.CustomPrimitiveData=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.CustomPrimitiveData=True
+MaterialExpressionVectorParameter.ParameterCustomization=True
+MaterialExpressionDoubleVectorParameter.General=True
+MaterialExpressionDoubleVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionDoubleVectorParameter.MaterialExpression=True
+MaterialExpressionTextureSampleParameter2D.General=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpression=True
+MaterialExpressionTextureSampleParameter2D.ParameterCustomization=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureBase=True
+B_RoomFinal_C.TransformCommon=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1865,28 +1900,30 @@ UdpMessagingSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings
 WmfMediaSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Attack,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveRight,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,GameMapsSettings.DefaultModes.SelectedGameModeDetails,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,
 BlockingVolume=BlockingVolume.Collision.Collision,
 BrushComponent=BlockingVolume.Collision.Collision,
-SceneComponent=StaticMeshComponent.Physics.ConstraintsGroup,BlockingVolume.Collision.Collision,
+SceneComponent=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,BlockingVolume.Collision.Collision,
 B_Room_C=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
 WorldPartitionRuntimeSpatialHash=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.WorldPartition.None,
 PlayerStart=BlockingVolume.Collision.Collision,
 CapsuleComponent=BlockingVolume.Collision.Collision,
 B_PlayerCharacter_C=BlockingVolume.Collision.Collision,
-Door_C=BlockingVolume.Collision.Collision,
+Door_C=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
 PropertyWrapper=BlockingVolume.Collision.Collision,
 K2Node_VariableSet=BlockingVolume.Collision.Collision,
 K2Node_VariableGet=BlockingVolume.Collision.Collision,
 EdGraph=BlockingVolume.Collision.Collision,
 K2Node_Variable=BlockingVolume.Collision.Collision,
 BillboardComponent=BlockingVolume.Collision.Collision,
-ChildActorComponent=BlockingVolume.Collision.Collision,
+ChildActorComponent=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
 Actor=BlockingVolume.Collision.Collision,
 Brush=BlockingVolume.Collision.Collision,
 Enemey_C=BlockingVolume.Collision.Collision,
 NewBlueprint_C=BlockingVolume.Collision.Collision,
 Enemy_Projectile_C=BlockingVolume.Collision.Collision,
-Wall_C=BlockingVolume.Collision.Collision,
+Wall_C=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
 roomBackground_C=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
+BoxComponent=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
+B_RoomFinal_C=StaticMeshComponent.Physics.ConstraintsGroup,BlockingVolume.Collision.Collision,
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1947,25 +1984,25 @@ ContentBrowserTab1.CurrentViewType=1
 
 [ContentBrowserRecent]
 MRUItem0=/Game/InGame/B_RoomFinal
-MRUItem1=/Game/Levels/EndRoom
-MRUItem2=/Game/Levels/Room4
-MRUItem3=/Game/Levels/Room3
-MRUItem4=/Game/Levels/Room2
-MRUItem5=/Game/Textures/Level3Material
-MRUItem6=/Game/Levels/BasicRoom
-MRUItem7=/Game/Levels/MasterLevel
-MRUItem8=/Game/InGame/B_Room
-MRUItem9=/Game/Textures/Level1Material
-MRUItem10=/Game/InGame/texture
-MRUItem11=/Game/Levels/MainMenu
-MRUItem12=/Game/Levels/LoseLevel
-MRUItem13=/Game/InGame/B_PlayerBullet
-MRUItem14=/Game/InGame/Wall
-MRUItem15=/Game/InGame/B_PlayerCharacter
-MRUItem16=/Game/InGame/Enemy_Projectile
-MRUItem17=/Game/Levels/StartLevel
-MRUItem18=/Game/InGame/Enemey
-MRUItem19=/Game/Enemey
+MRUItem1=/Game/InGame/Door
+MRUItem2=/Game/Textures/Level3Burrow_Mat
+MRUItem3=/Game/Textures/Level2Burrow_Mat
+MRUItem4=/Game/Textures/Level1Burrow_Mat
+MRUItem5=/Game/Textures/Level2Burrow
+MRUItem6=/Game/Levels/EndRoom
+MRUItem7=/Game/Levels/Room4
+MRUItem8=/Game/Levels/Room3
+MRUItem9=/Game/Textures/Level3RockMaterial
+MRUItem10=/Game/Textures/Level2RockMaterial
+MRUItem11=/Game/Levels/Room2
+MRUItem12=/Game/InGame/Wall
+MRUItem13=/Game/Textures/Level1RockMaterials/Level1Rock1
+MRUItem14=/Game/Levels/MasterLevel
+MRUItem15=/Game/Textures/Level1RockMaterial
+MRUItem16=/Game/Levels/BasicRoom
+MRUItem17=/Game/Textures/Level3Rock
+MRUItem18=/Game/Textures/Level3Material
+MRUItem19=/Game/InGame/B_Room
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2028,6 +2065,16 @@ GraphEditorQuickJumps=()
 /Game/InGame/Enemey.Enemey=1
 /Game/InGame/Enemy_Projectile.Enemy_Projectile=1
 /Game/InGame/Wall.Wall=1
+/Game/Textures/Level1RockMaterials/Level1Rock1.Level1Rock1=1
+/Game/Textures/Level2Burrow.Level2Burrow=1
+/Game/InGame/roomBackground.roomBackground=1
+/Game/Textures/Level1Material.Level1Material=1
+/Game/Textures/Level3Material.Level3Material=1
+/Game/InGame/B_RoomFinal.B_RoomFinal=1
+/Game/Textures/Level3Rock.Level3Rock=1
+/Game/Textures/Level1RockMaterial.Level1RockMaterial=1
+/Game/Textures/Level2RockMaterial.Level2RockMaterial=1
+/Game/Textures/Level3RockMaterial.Level3RockMaterial=1
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2239,6 +2286,24 @@ EdGraphNode_Comment="\"Object\" "
 PreviewMaterial="\"Object\" "
 Material="\"Object\" "
 MaterialInterface="\"Object\" "
+MaterialExpressionTextureSample="\"Object\" "
+MaterialExpressionTextureBase="\"Object\" "
+MaterialExpression="\"Object\" "
+MaterialExpressionTextureCoordinate="\"Object\" "
+MaterialExpressionMultiply="\"Object\" "
+MaterialExpressionConstant="\"Object\" "
+MaterialEditorInstanceConstant="\"Object\" "
+MaterialInstanceConstant="\"Object\" "
+MaterialInstance="\"Object\" "
+MaterialExpressionScalarParameter="\"Object\" "
+MaterialExpressionParameter="\"Object\" "
+MaterialExpressionVectorParameter="\"Object\" "
+MaterialExpressionDoubleVectorParameter="\"Object\" "
+MaterialExpressionTextureSampleParameter2D="\"Object\" "
+MaterialExpressionTextureSampleParameter="\"Object\" "
+Texture2D="\"Object\" "
+Texture="\"Object\" "
+StreamableRenderAsset="\"Object\" "
 
 [DetailCategoriesAdvanced]
 B_PlayerCharacter_C.Replication=False
@@ -2251,6 +2316,9 @@ Wall_C.Actor=True
 Wall_C.Collision=True
 SceneComponent.Physics=False
 StaticMeshComponent.Lighting=True
+Texture2D.Texture=True
+PreviewMaterial.Material=False
+MaterialEditorInstanceConstant.General=False
 
 [PlacementMode]
 RecentlyPlaced=/Game/InGame/roomBackground.roomBackground;
@@ -2381,7 +2449,6 @@ DisplayPaths=False
 DisplayActorsCount=False
 
 [/Script/UnrealEd.MaterialEditorOptions]
-bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
@@ -2444,4 +2511,9 @@ bMaterialQualityUsed[0]=0
 bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
+
+[MaterialInstanceEditor]
+bShowGrid=True
+bDrawGrid=False
+PrimType=1
 
