Added eggs as win condition
Win box now looks like eggs

--- a/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -128,13 +128,13 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 
 [MRU]
 MRUItem0=/Game/Levels/EndRoom
-MRUItem1=/Game/Levels/Room4
-MRUItem2=/Game/Levels/Room3
-MRUItem3=/Game/Levels/Room2
-MRUItem4=/Game/Levels/MasterLevel
-MRUItem5=/Game/Levels/BasicRoom
-MRUItem6=/Game/Levels/MainMenu
-MRUItem7=/Game/Levels/LoseLevel
+MRUItem1=/Game/Levels/LoseLevel
+MRUItem2=/Game/Levels/Room4
+MRUItem3=/Game/Levels/Room3
+MRUItem4=/Game/Levels/Room2
+MRUItem5=/Game/Levels/MasterLevel
+MRUItem6=/Game/Levels/BasicRoom
+MRUItem7=/Game/Levels/MainMenu
 MRUItem8=/Game/Levels/StartLevel
 MRUItem9=/Game/Levels/TestingPauseMenuLevel
 MRUItem10=/Game/Levels/TutorialRoom
@@ -145,6 +145,7 @@ LastLevel=/Game/Levels/EndRoom
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Textures/eggsMaterial.eggsMaterial
 OpenAssetsAtExit=/Game/InGame/B_RoomFinal.B_RoomFinal
 OpenAssetsAtExit=/Game/InGame/Door.Door
 OpenAssetsAtExit=/Game/Textures/Level3Burrow_Mat.Level3Burrow_Mat
@@ -880,6 +881,13 @@ MaterialExpressionTextureSampleParameter2D.ParameterCustomization=True
 MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureSample=True
 MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureBase=True
 B_RoomFinal_C.TransformCommon=True
+LoseLevel_C.Tick=True
+LoseLevel_C.Replication=True
+LoseLevel_C.Actor=True
+LoseLevel_C.Input=True
+LoseLevel_C.HLOD=True
+LoseLevel_C.WorldPartition=True
+LoseLevel_C.Events=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1900,7 +1908,7 @@ UdpMessagingSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings
 WmfMediaSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Attack,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveRight,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,GameMapsSettings.DefaultModes.SelectedGameModeDetails,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,
 BlockingVolume=BlockingVolume.Collision.Collision,
 BrushComponent=BlockingVolume.Collision.Collision,
-SceneComponent=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
+SceneComponent=
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,BlockingVolume.Collision.Collision,
 B_Room_C=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
 WorldPartitionRuntimeSpatialHash=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.WorldPartition.None,
@@ -1914,7 +1922,7 @@ K2Node_VariableGet=BlockingVolume.Collision.Collision,
 EdGraph=BlockingVolume.Collision.Collision,
 K2Node_Variable=BlockingVolume.Collision.Collision,
 BillboardComponent=BlockingVolume.Collision.Collision,
-ChildActorComponent=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
+ChildActorComponent=BlockingVolume.Collision.Collision,
 Actor=BlockingVolume.Collision.Collision,
 Brush=BlockingVolume.Collision.Collision,
 Enemey_C=BlockingVolume.Collision.Collision,
@@ -1924,6 +1932,7 @@ Wall_C=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.Constraint
 roomBackground_C=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
 BoxComponent=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
 B_RoomFinal_C=StaticMeshComponent.Physics.ConstraintsGroup,BlockingVolume.Collision.Collision,
+LoseScreen_C=BlockingVolume.Collision.Collision,
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1983,26 +1992,26 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/InGame/B_RoomFinal
-MRUItem1=/Game/InGame/Door
-MRUItem2=/Game/Textures/Level3Burrow_Mat
-MRUItem3=/Game/Textures/Level2Burrow_Mat
-MRUItem4=/Game/Textures/Level1Burrow_Mat
-MRUItem5=/Game/Textures/Level2Burrow
-MRUItem6=/Game/Levels/EndRoom
-MRUItem7=/Game/Levels/Room4
-MRUItem8=/Game/Levels/Room3
-MRUItem9=/Game/Textures/Level3RockMaterial
-MRUItem10=/Game/Textures/Level2RockMaterial
-MRUItem11=/Game/Levels/Room2
-MRUItem12=/Game/InGame/Wall
-MRUItem13=/Game/Textures/Level1RockMaterials/Level1Rock1
-MRUItem14=/Game/Levels/MasterLevel
-MRUItem15=/Game/Textures/Level1RockMaterial
-MRUItem16=/Game/Levels/BasicRoom
-MRUItem17=/Game/Textures/Level3Rock
-MRUItem18=/Game/Textures/Level3Material
-MRUItem19=/Game/InGame/B_Room
+MRUItem0=/Game/Levels/EndRoom
+MRUItem1=/Game/Textures/eggsMaterial
+MRUItem2=/Game/Levels/LoseLevel
+MRUItem3=/Game/GUI/MainMenu/LoseScreen
+MRUItem4=/Game/InGame/B_RoomFinal
+MRUItem5=/Game/InGame/Door
+MRUItem6=/Game/Textures/Level3Burrow_Mat
+MRUItem7=/Game/Textures/Level2Burrow_Mat
+MRUItem8=/Game/Textures/Level1Burrow_Mat
+MRUItem9=/Game/Textures/Level2Burrow
+MRUItem10=/Game/Levels/Room4
+MRUItem11=/Game/Levels/Room3
+MRUItem12=/Game/Textures/Level3RockMaterial
+MRUItem13=/Game/Textures/Level2RockMaterial
+MRUItem14=/Game/Levels/Room2
+MRUItem15=/Game/InGame/Wall
+MRUItem16=/Game/Textures/Level1RockMaterials/Level1Rock1
+MRUItem17=/Game/Levels/MasterLevel
+MRUItem18=/Game/Textures/Level1RockMaterial
+MRUItem19=/Game/Levels/BasicRoom
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2075,6 +2084,8 @@ GraphEditorQuickJumps=()
 /Game/Textures/Level1RockMaterial.Level1RockMaterial=1
 /Game/Textures/Level2RockMaterial.Level2RockMaterial=1
 /Game/Textures/Level3RockMaterial.Level3RockMaterial=1
+/Game/GUI/MainMenu/LoseScreen.LoseScreen=1
+/Game/Levels/LoseLevel.LoseLevel:PersistentLevel.LoseLevel=1
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
