--- a/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -127,21 +127,21 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,VisualizeMotionVectors=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,VisualizeLevelInstanceEditing=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeStrataMaterial=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,SingleLayerWaterRefractionFullPrecision=0,VirtualTextureResidency=1,DVRStreamingSystem=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenScreenSpaceDirectionalOcclusion=1,LumenReuseShadowMaps=1",GameShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,VisualizeMotionVectors=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,VisualizeLevelInstanceEditing=1,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeStrataMaterial=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,SingleLayerWaterRefractionFullPrecision=0,VirtualTextureResidency=1,DVRStreamingSystem=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenScreenSpaceDirectionalOcclusion=1,LumenReuseShadowMaps=1",BufferVisualizationMode="",NaniteVisualizationMode="",LumenVisualizationMode="",VirtualShadowMapVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/Levels/MainMenu
-MRUItem1=/Game/Levels/EndRoom
-MRUItem2=/Game/Levels/Room4
-MRUItem3=/Game/Levels/Room3
-MRUItem4=/Game/Levels/Room2
-MRUItem5=/Game/Levels/Room1
-MRUItem6=/Game/Levels/StartLevel
-MRUItem7=/Game/Levels/MasterLevel
-MRUItem8=/Game/Levels/BasicRoom
-MRUItem9=/Game/Levels/LoseLevel
-MRUItem10=/Game/Levels/TestingPauseMenuLevel
-MRUItem11=/Game/Levels/TutorialRoom
+MRUItem0=/Game/Levels/EndRoom
+MRUItem1=/Game/Levels/StartLevel
+MRUItem2=/Game/Levels/WinLevel
+MRUItem3=/Game/Levels/Room4
+MRUItem4=/Game/Levels/Room3
+MRUItem5=/Game/Levels/Room2
+MRUItem6=/Game/Levels/Room1
+MRUItem7=/Game/Levels/MainMenu
+MRUItem8=/Game/Levels/MasterLevel
+MRUItem9=/Game/Levels/BasicRoom
+MRUItem10=/Game/Levels/LoseLevel
+MRUItem11=/Game/Levels/TestingPauseMenuLevel
 
 [EditorStartup]
-LastLevel=/Game/Levels/MainMenu
+LastLevel=/Game/Levels/EndRoom
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -1849,12 +1849,12 @@ UdpMessagingSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings
 WmfMediaSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Attack,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveRight,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,GameMapsSettings.DefaultModes.SelectedGameModeDetails,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,
 BlockingVolume=BlockingVolume.Collision.Collision,
 BrushComponent=BlockingVolume.Collision.Collision,
-SceneComponent=
-StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,
-B_Room_C=BlockingVolume.Collision.Collision,
+SceneComponent=StaticMeshComponent.Physics.ConstraintsGroup,BlockingVolume.Collision.Collision,
+StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,BlockingVolume.Collision.Collision,
+B_Room_C=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
 WorldPartitionRuntimeSpatialHash=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.WorldPartition.None,
 PlayerStart=BlockingVolume.Collision.Collision,
-CapsuleComponent=BlockingVolume.Collision.Collision,
+CapsuleComponent=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
 B_PlayerCharacter_C=BlockingVolume.Collision.Collision,
 Door_C=BlockingVolume.Collision.Collision,
 PropertyWrapper=BlockingVolume.Collision.Collision,
@@ -1863,14 +1863,17 @@ K2Node_VariableGet=BlockingVolume.Collision.Collision,
 EdGraph=BlockingVolume.Collision.Collision,
 K2Node_Variable=BlockingVolume.Collision.Collision,
 BillboardComponent=
-ChildActorComponent=BlockingVolume.Collision.Collision,
+ChildActorComponent=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
 Actor=BlockingVolume.Collision.Collision,
 Brush=BlockingVolume.Collision.Collision,
 Enemey_C=BlockingVolume.Collision.Collision,
 NewBlueprint_C=BlockingVolume.Collision.Collision,
 Enemy_Projectile_C=BlockingVolume.Collision.Collision,
-Wall_C=BlockingVolume.Collision.Collision,
+Wall_C=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
 B_Room1_C=BlockingVolume.Collision.Collision,
+DirectionalLight=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
+BoxComponent=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
+B_RoomFinal_C=StaticMeshComponent.Physics.ConstraintsGroup,BlockingVolume.Collision.Collision,
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1930,26 +1933,26 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/MainMenu
-MRUItem1=/Game/Levels/EndRoom
-MRUItem2=/Game/Levels/Room4
-MRUItem3=/Game/Levels/Room3
-MRUItem4=/Game/Levels/Room2
-MRUItem5=/Game/Levels/Room1
-MRUItem6=/Game/Levels/StartLevel
-MRUItem7=/Game/Levels/MasterLevel
-MRUItem8=/Game/GUI/MainMenu/MainMenu
-MRUItem9=/Game/InGame/B_Room1
-MRUItem10=/Game/GUI/MainMenu/WinScreen
-MRUItem11=/Game/GUI/MainMenu/LoseScreen
-MRUItem12=/Game/Levels/BasicRoom
-MRUItem13=/Game/Levels/LoseLevel
-MRUItem14=/Game/InGame/B_PlayerBullet
-MRUItem15=/Game/InGame/Wall
-MRUItem16=/Game/InGame/B_PlayerCharacter
-MRUItem17=/Game/InGame/Enemy_Projectile
-MRUItem18=/Game/InGame/Enemey
-MRUItem19=/Game/Enemey
+MRUItem0=/Game/Levels/EndRoom
+MRUItem1=/Game/Levels/StartLevel
+MRUItem2=/Game/Levels/WinLevel
+MRUItem3=/Game/Levels/Room4
+MRUItem4=/Game/Levels/Room3
+MRUItem5=/Game/Levels/Room2
+MRUItem6=/Game/Levels/Room1
+MRUItem7=/Game/Levels/MainMenu
+MRUItem8=/Game/Levels/MasterLevel
+MRUItem9=/Game/GUI/MainMenu/MainMenu
+MRUItem10=/Game/InGame/B_Room1
+MRUItem11=/Game/GUI/MainMenu/WinScreen
+MRUItem12=/Game/GUI/MainMenu/LoseScreen
+MRUItem13=/Game/Levels/BasicRoom
+MRUItem14=/Game/Levels/LoseLevel
+MRUItem15=/Game/InGame/B_PlayerBullet
+MRUItem16=/Game/InGame/Wall
+MRUItem17=/Game/InGame/B_PlayerCharacter
+MRUItem18=/Game/InGame/Enemy_Projectile
+MRUItem19=/Game/InGame/Enemey
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2235,6 +2238,7 @@ StaticMeshComponent.Collision=False
 Wall_C.Actor=True
 Wall_C.Collision=True
 SceneComponent.Physics=False
+ChildActorComponent.Rendering=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/InGame/B_Room1.B_Room1;
