--- a/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -141,10 +141,12 @@ MRUItem10=/Game/Levels/LoseLevel
 MRUItem11=/Game/Levels/TestingPauseMenuLevel
 
 [EditorStartup]
-LastLevel=/Game/Levels/EndRoom
+LastLevel=/Game/Levels/MainMenu
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
+OpenAssetsAtExit=/Game/InGame/Enemy_Projectile.Enemy_Projectile
+OpenAssetsAtExit=/Game/InGame/B_Room1.B_Room1
 
 [DetailCategories]
 Actor.TransformCommon=True
@@ -829,6 +831,61 @@ B_RoomFinal_C.Collision=True
 B_RoomFinal_C.HLOD=True
 B_RoomFinal_C.Input=True
 B_RoomFinal_C.Actor=True
+SphereComponent.Variable=True
+SphereComponent.TransformCommon=True
+SphereComponent.Sockets=True
+SphereComponent.Shape=True
+SphereComponent.Navigation=True
+SphereComponent.HLOD=True
+SphereComponent.ComponentTick=True
+SphereComponent.Rendering=True
+SphereComponent.Physics=True
+SphereComponent.Collision=True
+SphereComponent.Tags=True
+SphereComponent.ComponentReplication=True
+SphereComponent.Cooking=True
+SphereComponent.Events=True
+Texture2D.LevelOfDetail=True
+Texture2D.Compression=True
+Texture2D.Texture=True
+Texture2D.Adjustments=True
+Texture2D.File Path=True
+Texture2D.Compositing=True
+PaperExtractSpritesSettings.Settings=True
+PaperExtractSpritesSettings.Naming=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+PaperExtractSpriteGridSettings.Grid=True
+PaperSpriteComponent.Variable=True
+PaperSpriteComponent.TransformCommon=True
+PaperSpriteComponent.Sockets=True
+PaperSpriteComponent.Sprite=True
+PaperSpriteComponent.Materials=True
+PaperSpriteComponent.ComponentTick=True
+PaperSpriteComponent.HLOD=True
+PaperSpriteComponent.Physics=True
+PaperSpriteComponent.Collision=True
+PaperSpriteComponent.Lighting=True
+PaperSpriteComponent.Rendering=True
+PaperSpriteComponent.Navigation=True
+PaperSpriteComponent.VirtualTexture=True
+PaperSpriteComponent.Tags=True
+PaperSpriteComponent.ComponentReplication=True
+PaperSpriteComponent.Activation=True
+PaperSpriteComponent.Cooking=True
+PaperSpriteComponent.Events=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1759,6 +1816,8 @@ SequencerWidgets.TimeStamp=2022.08.24-11.31.55
 SequencerWidgets.LastCompileMethod=Unknown
 NewLevelDialog.TimeStamp=2022.08.24-11.31.54
 NewLevelDialog.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2022.08.24-11.31.56
+TextureEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -1924,7 +1983,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/InGame
+ContentBrowserTab1.SelectedPaths=/Game/Textures
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -1933,26 +1992,26 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/EndRoom
-MRUItem1=/Game/Levels/StartLevel
-MRUItem2=/Game/Levels/WinLevel
-MRUItem3=/Game/Levels/Room4
-MRUItem4=/Game/Levels/Room3
-MRUItem5=/Game/Levels/Room2
-MRUItem6=/Game/Levels/Room1
-MRUItem7=/Game/Levels/MainMenu
-MRUItem8=/Game/Levels/MasterLevel
-MRUItem9=/Game/GUI/MainMenu/MainMenu
-MRUItem10=/Game/InGame/B_Room1
-MRUItem11=/Game/GUI/MainMenu/WinScreen
-MRUItem12=/Game/GUI/MainMenu/LoseScreen
-MRUItem13=/Game/Levels/BasicRoom
-MRUItem14=/Game/Levels/LoseLevel
-MRUItem15=/Game/InGame/B_PlayerBullet
-MRUItem16=/Game/InGame/Wall
-MRUItem17=/Game/InGame/B_PlayerCharacter
-MRUItem18=/Game/InGame/Enemy_Projectile
-MRUItem19=/Game/InGame/Enemey
+MRUItem0=/Game/InGame/B_Room1
+MRUItem1=/Game/Textures/Animations/EnemySpritesheet_Mat
+MRUItem2=/Game/Textures/Animations/EnemySpritesheet
+MRUItem3=/Game/InGame/Enemy_Projectile
+MRUItem4=/Game/Levels/EndRoom
+MRUItem5=/Game/Levels/StartLevel
+MRUItem6=/Game/Levels/WinLevel
+MRUItem7=/Game/Levels/Room4
+MRUItem8=/Game/Levels/Room3
+MRUItem9=/Game/Levels/Room2
+MRUItem10=/Game/Levels/Room1
+MRUItem11=/Game/Levels/MainMenu
+MRUItem12=/Game/Levels/MasterLevel
+MRUItem13=/Game/GUI/MainMenu/MainMenu
+MRUItem14=/Game/GUI/MainMenu/WinScreen
+MRUItem15=/Game/GUI/MainMenu/LoseScreen
+MRUItem16=/Game/Levels/BasicRoom
+MRUItem17=/Game/Levels/LoseLevel
+MRUItem18=/Game/InGame/B_PlayerBullet
+MRUItem19=/Game/InGame/Wall
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2018,6 +2077,7 @@ GraphEditorQuickJumps=()
 /Game/GUI/MainMenu/LoseScreen.LoseScreen=1
 /Game/GUI/MainMenu/WinScreen.WinScreen=1
 /Game/InGame/B_Room1.B_Room1=1
+/Game/Textures/Animations/EnemySpritesheet.EnemySpritesheet=1
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2227,6 +2287,15 @@ PauseMenu_C="\"Object\" "
 BoxComponent="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
 Image="\"Object\" \"Object.Appearance.Brush\" "
+PaperExtractSpritesSettings="\"Object\" "
+PreviewMaterial="\"Object\" "
+Material="\"Object\" "
+MaterialInterface="\"Object\" "
+PaperExtractSpriteGridSettings="\"Object\" "
+Texture2D="\"Object\" "
+Texture="\"Object\" "
+StreamableRenderAsset="\"Object\" "
+PaperSpriteComponent="\"Object\" "
 
 [DetailCategoriesAdvanced]
 B_PlayerCharacter_C.Replication=False
@@ -2367,4 +2436,69 @@ RemoveLevelWarning=False
 [WorldBrowser]
 DisplayPaths=False
 DisplayActorsCount=False
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bShowGrid=False
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bPlatformUsed[49]=0
+bPlatformUsed[50]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+bMaterialQualityUsed[3]=0
 
