--- a/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -144,7 +144,7 @@ MRUItem11=/Game/Levels/TestingPauseMenuLevel
 LastLevel=/Game/Levels/MainMenu
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 Actor.TransformCommon=True
@@ -935,9 +935,9 @@ HealthBar_C.Navigation=True
 K2Node_SwitchInteger.PinOptions=True
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=160.000
+ScreenPosition=X=594.000 Y=218.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2036,7 +2036,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game/InGame
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -2045,26 +2045,26 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/GUI/MainMenu/WinScreen
-MRUItem1=/Game/InGame/Door
-MRUItem2=/Game/InGame/B_PlayerCharacter
-MRUItem3=/Game/Animation/PlayerIdleRight
-MRUItem4=/Game/Animation/PlayerIdleLeft
-MRUItem5=/Game/Animation/PlayerIdleBack
-MRUItem6=/Game/Animation/PlayerIdleFront
-MRUItem7=/Game/Animation/PlayerIdle
-MRUItem8=/Game/Animation/PlayerWalkRight
-MRUItem9=/Game/Animation/PlayerWalkLeft
-MRUItem10=/Game/Animation/PlayerWalkFront
-MRUItem11=/Game/Animation/PlayerWalkBack
-MRUItem12=/Game/InGame/B_PlayerBullet
-MRUItem13=/Game/InGame/Enemey
-MRUItem14=/Game/GUI/InGameGui/HealthBar
-MRUItem15=/Game/InGame/Enemy_Projectile
-MRUItem16=/Game/GUI/MainMenu/LoseScreen
-MRUItem17=/Game/GUI/MainMenu/MainMenu
-MRUItem18=/Game/Levels/MainMenu
-MRUItem19=/Game/Textures/Character_Sprite
+MRUItem0=/Game/InGame/B_Room
+MRUItem1=/Game/GUI/MainMenu/WinScreen
+MRUItem2=/Game/InGame/Door
+MRUItem3=/Game/InGame/B_PlayerCharacter
+MRUItem4=/Game/Animation/PlayerIdleRight
+MRUItem5=/Game/Animation/PlayerIdleLeft
+MRUItem6=/Game/Animation/PlayerIdleBack
+MRUItem7=/Game/Animation/PlayerIdleFront
+MRUItem8=/Game/Animation/PlayerIdle
+MRUItem9=/Game/Animation/PlayerWalkRight
+MRUItem10=/Game/Animation/PlayerWalkLeft
+MRUItem11=/Game/Animation/PlayerWalkFront
+MRUItem12=/Game/Animation/PlayerWalkBack
+MRUItem13=/Game/InGame/B_PlayerBullet
+MRUItem14=/Game/InGame/Enemey
+MRUItem15=/Game/GUI/InGameGui/HealthBar
+MRUItem16=/Game/InGame/Enemy_Projectile
+MRUItem17=/Game/GUI/MainMenu/LoseScreen
+MRUItem18=/Game/GUI/MainMenu/MainMenu
+MRUItem19=/Game/Levels/MainMenu
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2384,6 +2384,7 @@ Wall_C.Collision=True
 SceneComponent.Physics=False
 ChildActorComponent.Rendering=True
 WrapBox.Behavior=False
+StaticMeshComponent.Lighting=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/InGame/B_Room1.B_Room1;
