--- a/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -128,15 +128,15 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 
 [MRU]
 MRUItem0=/Game/Levels/MainMenu
-MRUItem1=/Game/Levels/LoseLevel
-MRUItem2=/Game/Levels/MasterLevel
-MRUItem3=/Game/Levels/EndRoom
-MRUItem4=/Game/Levels/StartLevel
+MRUItem1=/Game/Levels/Room1
+MRUItem2=/Game/Levels/Room2
+MRUItem3=/Game/Levels/StartLevel
+MRUItem4=/Game/Levels/Room4
 MRUItem5=/Game/Levels/WinLevel
-MRUItem6=/Game/Levels/Room4
-MRUItem7=/Game/Levels/Room3
-MRUItem8=/Game/Levels/Room2
-MRUItem9=/Game/Levels/Room1
+MRUItem6=/Game/Levels/MasterLevel
+MRUItem7=/Game/Levels/LoseLevel
+MRUItem8=/Game/Levels/EndRoom
+MRUItem9=/Game/Levels/Room3
 MRUItem10=/Game/Levels/BasicRoom
 MRUItem11=/Game/Levels/TestingPauseMenuLevel
 
@@ -145,6 +145,14 @@ LastLevel=/Game/Levels/MainMenu
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/InGame/B_PlayerCharacter.B_PlayerCharacter
+OpenAssetsAtExit=/Game/GUI/InGameGui/HealthBar.HealthBar
+OpenAssetsAtExit=/Game/InGame/Wall.Wall
+OpenAssetsAtExit=/Game/GUI/MainMenu/PauseMenu.PauseMenu
+OpenAssetsAtExit=/Game/GUI/MainMenu/MainMenu.MainMenu
+OpenAssetsAtExit=/Game/GUI/MainMenu/WinScreen.WinScreen
+OpenAssetsAtExit=/Game/GUI/MainMenu/LoseScreen.LoseScreen
+OpenAssetsAtExit=/Game/InGame/Enemey.Enemey
 
 [DetailCategories]
 Actor.TransformCommon=True
@@ -933,11 +941,22 @@ HealthBar_C.Accessibility=True
 HealthBar_C.Clipping=True
 HealthBar_C.Navigation=True
 K2Node_SwitchInteger.PinOptions=True
+RichTextBlock.Layout=True
+RichTextBlock.Content=True
+RichTextBlock.Appearance=True
+RichTextBlock.Accessibility=True
+RichTextBlock.Clipping=True
+RichTextBlock.Wrapping=True
+RichTextBlock.Behavior=True
+RichTextBlock.Render Transform=True
+RichTextBlock.Performance=True
+RichTextBlock.Navigation=True
+RichTextBlock.Localization=True
 
 [RootWindow]
 ScreenPosition=X=594.000 Y=218.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1859,8 +1878,8 @@ Voice.TimeStamp=2023.02.03-20.26.16
 Voice.LastCompileMethod=External
 MovieSceneCapture.TimeStamp=2023.02.03-20.25.03
 MovieSceneCapture.LastCompileMethod=External
-SequencerWidgets.TimeStamp=2022.08.24-11.31.55
-SequencerWidgets.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2023.02.03-20.25.28
+SequencerWidgets.LastCompileMethod=External
 NewLevelDialog.TimeStamp=2022.08.24-11.31.54
 NewLevelDialog.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2022.08.24-11.31.56
@@ -1955,7 +1974,7 @@ UdpMessagingSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings
 WmfMediaSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Attack,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveRight,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,GameMapsSettings.DefaultModes.SelectedGameModeDetails,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,
 BlockingVolume=BlockingVolume.Collision.Collision,
 BrushComponent=BlockingVolume.Collision.Collision,
-SceneComponent=StaticMeshComponent.Physics.ConstraintsGroup,BlockingVolume.Collision.Collision,
+SceneComponent=
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,BlockingVolume.Collision.Collision,
 B_Room_C=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
 WorldPartitionRuntimeSpatialHash=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.WorldPartition.None,
@@ -2045,26 +2064,26 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/InGame/B_Room
-MRUItem1=/Game/GUI/MainMenu/WinScreen
-MRUItem2=/Game/InGame/Door
-MRUItem3=/Game/InGame/B_PlayerCharacter
-MRUItem4=/Game/Animation/PlayerIdleRight
-MRUItem5=/Game/Animation/PlayerIdleLeft
-MRUItem6=/Game/Animation/PlayerIdleBack
-MRUItem7=/Game/Animation/PlayerIdleFront
-MRUItem8=/Game/Animation/PlayerIdle
-MRUItem9=/Game/Animation/PlayerWalkRight
-MRUItem10=/Game/Animation/PlayerWalkLeft
-MRUItem11=/Game/Animation/PlayerWalkFront
-MRUItem12=/Game/Animation/PlayerWalkBack
-MRUItem13=/Game/InGame/B_PlayerBullet
-MRUItem14=/Game/InGame/Enemey
-MRUItem15=/Game/GUI/InGameGui/HealthBar
-MRUItem16=/Game/InGame/Enemy_Projectile
-MRUItem17=/Game/GUI/MainMenu/LoseScreen
-MRUItem18=/Game/GUI/MainMenu/MainMenu
-MRUItem19=/Game/Levels/MainMenu
+MRUItem0=/Game/InGame/Enemey
+MRUItem1=/Game/GUI/MainMenu/LoseScreen
+MRUItem2=/Game/GUI/MainMenu/WinScreen
+MRUItem3=/Game/Levels/MainMenu
+MRUItem4=/Game/Levels/Room1
+MRUItem5=/Game/Levels/Room2
+MRUItem6=/Game/Levels/StartLevel
+MRUItem7=/Game/Levels/Room4
+MRUItem8=/Game/Levels/WinLevel
+MRUItem9=/Game/Levels/MasterLevel
+MRUItem10=/Game/GUI/MainMenu/MainMenu
+MRUItem11=/Game/GUI/MainMenu/PauseMenu
+MRUItem12=/Game/InGame/Wall
+MRUItem13=/Game/GUI/InGameGui/HealthBar
+MRUItem14=/Game/InGame/B_PlayerCharacter
+MRUItem15=/Game/InGame/B_Room
+MRUItem16=/Game/InGame/Door
+MRUItem17=/Game/Animation/PlayerIdleRight
+MRUItem18=/Game/Animation/PlayerIdleLeft
+MRUItem19=/Game/Animation/PlayerIdleBack
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2224,7 +2243,7 @@ LandscapeSettings=True
 
 [DetailPropertyExpansion]
 ProjectPackagingSettings="\"Object\" \"Object.Packaging.IniKeyBlacklist\" \"Object.Packaging.IniSectionBlacklist\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" "
 AssetManagerSettings="\"Object\" \"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" "
 DeveloperSettings="\"Object\" "
 AnimationSettings="\"Object\" \"Object.Compression.KeyEndEffectorsMatchNameArray\" \"Object.CustomAttributes.BoneTimecodeCustomAttributeNameSettings\" \"Object.Mirroring.MirrorFindReplaceExpressions\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[0]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[1]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[2]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[3]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[4]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[5]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[6]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[7]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[8]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[9]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[10]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[11]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[12]\" "
@@ -2332,12 +2351,12 @@ CameraComponent="\"Object\" "
 CapsuleComponent="\"Object\" "
 CanvasPanel="\"Object\" "
 PanelWidget="\"Object\" "
-Widget="\"Object\" "
-Visual="\"Object\" "
+Widget="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" "
+Visual="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" "
 Button="\"Object\" "
 ContentWidget="\"Object\" "
-TextBlock="\"Object\" "
-TextLayoutWidget="\"Object\" "
+TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" "
+TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" "
 WrapBox="\"Object\" "
 BlockingVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2371,6 +2390,7 @@ HealthBar_C="\"Object\" "
 K2Node_SwitchInteger="\"Object\" "
 K2Node_Switch="\"Object\" "
 PaperFlipbookComponent="\"Object\" "
+RichTextBlock="\"Object\" "
 
 [DetailCategoriesAdvanced]
 B_PlayerCharacter_C.Replication=False
@@ -2385,10 +2405,18 @@ SceneComponent.Physics=False
 ChildActorComponent.Rendering=True
 WrapBox.Behavior=False
 StaticMeshComponent.Lighting=True
+TextBlock.Wrapping=False
+TextBlock.Appearance=False
+TextBlock.Accessibility=False
+TextBlock.Clipping=False
+TextBlock.Behavior=False
+RichTextBlock.Appearance=False
+Button.Accessibility=False
+Button.Behavior=False
 
 [PlacementMode]
-RecentlyPlaced=/Game/InGame/B_Room1.B_Room1;
 RecentlyPlaced=/Game/InGame/Enemey.Enemey;
+RecentlyPlaced=/Game/InGame/B_Room1.B_Room1;
 RecentlyPlaced=/Game/InGame/B_PlayerCharacter.B_PlayerCharacter;
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
