--- a/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -128,15 +128,15 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 
 [MRU]
 MRUItem0=/Game/Levels/MainMenu
-MRUItem1=/Game/Levels/Room1
-MRUItem2=/Game/Levels/Room2
-MRUItem3=/Game/Levels/StartLevel
-MRUItem4=/Game/Levels/Room4
+MRUItem1=/Game/Levels/EndRoom
+MRUItem2=/Game/Levels/Room4
+MRUItem3=/Game/Levels/Room3
+MRUItem4=/Game/Levels/Room2
 MRUItem5=/Game/Levels/WinLevel
-MRUItem6=/Game/Levels/MasterLevel
-MRUItem7=/Game/Levels/LoseLevel
-MRUItem8=/Game/Levels/EndRoom
-MRUItem9=/Game/Levels/Room3
+MRUItem6=/Game/Levels/StartLevel
+MRUItem7=/Game/Levels/Room1
+MRUItem8=/Game/Levels/MasterLevel
+MRUItem9=/Game/Levels/LoseLevel
 MRUItem10=/Game/Levels/BasicRoom
 MRUItem11=/Game/Levels/TestingPauseMenuLevel
 
@@ -1974,7 +1974,7 @@ UdpMessagingSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings
 WmfMediaSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Attack,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveRight,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,GameMapsSettings.DefaultModes.SelectedGameModeDetails,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,
 BlockingVolume=BlockingVolume.Collision.Collision,
 BrushComponent=BlockingVolume.Collision.Collision,
-SceneComponent=
+SceneComponent=StaticMeshComponent.Physics.ConstraintsGroup,BlockingVolume.Collision.Collision,
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,BlockingVolume.Collision.Collision,
 B_Room_C=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
 WorldPartitionRuntimeSpatialHash=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.WorldPartition.None,
@@ -2055,7 +2055,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/InGame
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -2064,26 +2064,26 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/InGame/Enemey
-MRUItem1=/Game/GUI/MainMenu/LoseScreen
-MRUItem2=/Game/GUI/MainMenu/WinScreen
-MRUItem3=/Game/Levels/MainMenu
-MRUItem4=/Game/Levels/Room1
-MRUItem5=/Game/Levels/Room2
-MRUItem6=/Game/Levels/StartLevel
-MRUItem7=/Game/Levels/Room4
-MRUItem8=/Game/Levels/WinLevel
-MRUItem9=/Game/Levels/MasterLevel
-MRUItem10=/Game/GUI/MainMenu/MainMenu
-MRUItem11=/Game/GUI/MainMenu/PauseMenu
-MRUItem12=/Game/InGame/Wall
-MRUItem13=/Game/GUI/InGameGui/HealthBar
-MRUItem14=/Game/InGame/B_PlayerCharacter
-MRUItem15=/Game/InGame/B_Room
-MRUItem16=/Game/InGame/Door
-MRUItem17=/Game/Animation/PlayerIdleRight
-MRUItem18=/Game/Animation/PlayerIdleLeft
-MRUItem19=/Game/Animation/PlayerIdleBack
+MRUItem0=/Game/Levels/MainMenu
+MRUItem1=/Game/Levels/EndRoom
+MRUItem2=/Game/Levels/Room4
+MRUItem3=/Game/Levels/Room3
+MRUItem4=/Game/Levels/Room2
+MRUItem5=/Game/Levels/WinLevel
+MRUItem6=/Game/Levels/MasterLevel
+MRUItem7=/Game/Levels/StartLevel
+MRUItem8=/Game/InGame/Enemey
+MRUItem9=/Game/GUI/MainMenu/LoseScreen
+MRUItem10=/Game/GUI/MainMenu/WinScreen
+MRUItem11=/Game/GUI/MainMenu/MainMenu
+MRUItem12=/Game/GUI/MainMenu/PauseMenu
+MRUItem13=/Game/InGame/Wall
+MRUItem14=/Game/GUI/InGameGui/HealthBar
+MRUItem15=/Game/InGame/B_PlayerCharacter
+MRUItem16=/Game/Levels/Room1
+MRUItem17=/Game/InGame/B_Room
+MRUItem18=/Game/InGame/Door
+MRUItem19=/Game/Animation/PlayerIdleRight
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2243,7 +2243,7 @@ LandscapeSettings=True
 
 [DetailPropertyExpansion]
 ProjectPackagingSettings="\"Object\" \"Object.Packaging.IniKeyBlacklist\" \"Object.Packaging.IniSectionBlacklist\" "
-Object="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" "
+Object="\"Object\" "
 AssetManagerSettings="\"Object\" \"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" "
 DeveloperSettings="\"Object\" "
 AnimationSettings="\"Object\" \"Object.Compression.KeyEndEffectorsMatchNameArray\" \"Object.CustomAttributes.BoneTimecodeCustomAttributeNameSettings\" \"Object.Mirroring.MirrorFindReplaceExpressions\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[0]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[1]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[2]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[3]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[4]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[5]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[6]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[7]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[8]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[9]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[10]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[11]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[12]\" "
