Player now spawns on the left on all levels
Changed the set location in each level to spawn the player on the left

--- a/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -128,14 +128,14 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 
 [MRU]
 MRUItem0=/Game/Levels/MainMenu
-MRUItem1=/Game/Levels/EndRoom
-MRUItem2=/Game/Levels/Room4
-MRUItem3=/Game/Levels/Room3
-MRUItem4=/Game/Levels/Room2
-MRUItem5=/Game/Levels/WinLevel
-MRUItem6=/Game/Levels/StartLevel
-MRUItem7=/Game/Levels/Room1
-MRUItem8=/Game/Levels/MasterLevel
+MRUItem1=/Game/Levels/MasterLevel
+MRUItem2=/Game/Levels/EndRoom
+MRUItem3=/Game/Levels/Room4
+MRUItem4=/Game/Levels/Room3
+MRUItem5=/Game/Levels/Room2
+MRUItem6=/Game/Levels/WinLevel
+MRUItem7=/Game/Levels/StartLevel
+MRUItem8=/Game/Levels/Room1
 MRUItem9=/Game/Levels/LoseLevel
 MRUItem10=/Game/Levels/BasicRoom
 MRUItem11=/Game/Levels/TestingPauseMenuLevel
@@ -144,15 +144,10 @@ MRUItem11=/Game/Levels/TestingPauseMenuLevel
 LastLevel=/Game/Levels/MainMenu
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/InGame/B_PlayerCharacter.B_PlayerCharacter
-OpenAssetsAtExit=/Game/GUI/InGameGui/HealthBar.HealthBar
-OpenAssetsAtExit=/Game/InGame/Wall.Wall
-OpenAssetsAtExit=/Game/GUI/MainMenu/PauseMenu.PauseMenu
-OpenAssetsAtExit=/Game/GUI/MainMenu/MainMenu.MainMenu
-OpenAssetsAtExit=/Game/GUI/MainMenu/WinScreen.WinScreen
-OpenAssetsAtExit=/Game/GUI/MainMenu/LoseScreen.LoseScreen
-OpenAssetsAtExit=/Game/InGame/Enemey.Enemey
+CleanShutdown=False
+OpenAssetsAtExit=/Game/InGame/B_Room.B_Room
+OpenAssetsAtExit=/Game/InGame/B_Room1.B_Room1
+OpenAssetsAtExit=/Game/InGame/B_RoomFinal.B_RoomFinal
 
 [DetailCategories]
 Actor.TransformCommon=True
@@ -952,6 +947,43 @@ RichTextBlock.Render Transform=True
 RichTextBlock.Performance=True
 RichTextBlock.Navigation=True
 RichTextBlock.Localization=True
+CameraActor.TransformCommon=True
+CameraActor.CameraSettings=True
+CameraActor.CameraOptions=True
+CameraActor.AutoPlayerActivation=True
+CameraActor.Camera=True
+CameraActor.PostProcess=True
+CameraActor.Tags=True
+CameraActor.Activation=True
+CameraActor.Collision=True
+CameraActor.Cooking=True
+CameraActor.Replication=True
+CameraActor.HLOD=True
+CameraActor.Actor=True
+MyPlayerController_C.TransformCommon=True
+ParticleEventManager.Rendering=True
+ParticleEventManager.Replication=True
+ParticleEventManager.Collision=True
+ParticleEventManager.HLOD=True
+ParticleEventManager.Input=True
+ParticleEventManager.Actor=True
+PlayerCameraManager.TransformCommon=True
+PlayerCameraManager.Rendering=True
+PlayerCameraManager.Tags=True
+PlayerCameraManager.Activation=True
+PlayerCameraManager.Collision=True
+PlayerCameraManager.Cooking=True
+PlayerCameraManager.PlayerCameraManager=True
+PlayerCameraManager.Debug=True
+PlayerCameraManager.Replication=True
+PlayerCameraManager.HLOD=True
+PlayerCameraManager.Input=True
+PlayerCameraManager.Actor=True
+PlayerState.Replication=True
+PlayerState.Actor=True
+B_RoomFinal_C.Tick=True
+B_RoomFinal_C.WorldPartition=True
+B_RoomFinal_C.Events=True
 
 [RootWindow]
 ScreenPosition=X=594.000 Y=218.000
@@ -1974,13 +2006,13 @@ UdpMessagingSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings
 WmfMediaSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Attack,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveRight,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,GameMapsSettings.DefaultModes.SelectedGameModeDetails,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,
 BlockingVolume=BlockingVolume.Collision.Collision,
 BrushComponent=BlockingVolume.Collision.Collision,
-SceneComponent=StaticMeshComponent.Physics.ConstraintsGroup,BlockingVolume.Collision.Collision,
+SceneComponent=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,BlockingVolume.Collision.Collision,
 B_Room_C=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
 WorldPartitionRuntimeSpatialHash=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.WorldPartition.None,
-PlayerStart=BlockingVolume.Collision.Collision,
+PlayerStart=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
 CapsuleComponent=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
-B_PlayerCharacter_C=
+B_PlayerCharacter_C=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
 Door_C=BlockingVolume.Collision.Collision,
 PropertyWrapper=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
 K2Node_VariableSet=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
@@ -1991,11 +2023,11 @@ BillboardComponent=
 ChildActorComponent=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
 Actor=BlockingVolume.Collision.Collision,
 Brush=BlockingVolume.Collision.Collision,
-Enemey_C=
+Enemey_C=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
 NewBlueprint_C=BlockingVolume.Collision.Collision,
 Enemy_Projectile_C=BlockingVolume.Collision.Collision,
 Wall_C=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
-B_Room1_C=BlockingVolume.Collision.Collision,
+B_Room1_C=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
 DirectionalLight=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
 BoxComponent=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
 B_RoomFinal_C=StaticMeshComponent.Physics.ConstraintsGroup,BlockingVolume.Collision.Collision,
@@ -2005,6 +2037,10 @@ K2Node_SwitchInteger=BlockingVolume.Collision.Collision,
 HealthBar_C=BlockingVolume.Collision.Collision,
 K2Node_InputAxisEvent=BlockingVolume.Collision.Collision,
 B_PlayerBullet_C=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
+CameraActor=StaticMeshComponent.Physics.ConstraintsGroup,BlockingVolume.Collision.Collision,
+CameraComponent=StaticMeshComponent.Physics.ConstraintsGroup,BlockingVolume.Collision.Collision,
+MyPlayerController_C=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
+PlayerState=BlockingVolume.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -2024,7 +2060,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/Levels
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2064,26 +2100,26 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/MainMenu
-MRUItem1=/Game/Levels/EndRoom
-MRUItem2=/Game/Levels/Room4
-MRUItem3=/Game/Levels/Room3
-MRUItem4=/Game/Levels/Room2
-MRUItem5=/Game/Levels/WinLevel
-MRUItem6=/Game/Levels/MasterLevel
-MRUItem7=/Game/Levels/StartLevel
-MRUItem8=/Game/InGame/Enemey
-MRUItem9=/Game/GUI/MainMenu/LoseScreen
-MRUItem10=/Game/GUI/MainMenu/WinScreen
-MRUItem11=/Game/GUI/MainMenu/MainMenu
-MRUItem12=/Game/GUI/MainMenu/PauseMenu
-MRUItem13=/Game/InGame/Wall
-MRUItem14=/Game/GUI/InGameGui/HealthBar
-MRUItem15=/Game/InGame/B_PlayerCharacter
-MRUItem16=/Game/Levels/Room1
-MRUItem17=/Game/InGame/B_Room
-MRUItem18=/Game/InGame/Door
-MRUItem19=/Game/Animation/PlayerIdleRight
+MRUItem0=/Game/InGame/B_RoomFinal
+MRUItem1=/Game/InGame/B_Room1
+MRUItem2=/Game/Levels/MainMenu
+MRUItem3=/Game/InGame/B_Room
+MRUItem4=/Game/Levels/MasterLevel
+MRUItem5=/Game/Levels/EndRoom
+MRUItem6=/Game/Levels/Room4
+MRUItem7=/Game/Levels/Room3
+MRUItem8=/Game/Levels/Room2
+MRUItem9=/Game/Levels/WinLevel
+MRUItem10=/Game/Levels/StartLevel
+MRUItem11=/Game/InGame/Enemey
+MRUItem12=/Game/GUI/MainMenu/LoseScreen
+MRUItem13=/Game/GUI/MainMenu/WinScreen
+MRUItem14=/Game/GUI/MainMenu/MainMenu
+MRUItem15=/Game/GUI/MainMenu/PauseMenu
+MRUItem16=/Game/InGame/Wall
+MRUItem17=/Game/GUI/InGameGui/HealthBar
+MRUItem18=/Game/InGame/B_PlayerCharacter
+MRUItem19=/Game/Levels/Room1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
